# pyergonomics

./: .gitignore  README.md  build_editor.sh  pyproject.toml
app/editor/: editor.py  editor.qml
dev/: README.md  movement_classification.ipynb  xsens_skeleton.ipynb
dev/ui/zed/: README.md  main.py  zed_body_tracker.py  zed_skeleton_provider.py  zed_viewer.qml
dev/zed/: README.md  body_tracking.ipynb  confidence.ipynb  floor.ipynb
docs/: configuration.md  data_format.md  development.md  project_settings.md  zed.md
examples/data/optitrack/: project.toml
examples/notebooks/: eaws.ipynb  eaws2.ipynb  metrics.ipynb
examples/ui/3d-view/: main.py  main.qml
examples/ui/assessment-view/: main.py  main.qml
examples/ui/track-view/: main.py  main.qml
examples/ui/video-view/: main.py  main.qml
src/pyergonomics/: __init__.py  configuration.py  pose_assessment.py  pose_skeletons.py  project_settings.py  track_video.py  tracker.py  trackers.py
src/pyergonomics/cli/: __init__.py  anonymize.py  import_bvh.py  import_video.py  import_zed.py
src/pyergonomics/converters/: csv_export.py
src/pyergonomics/exporters/: csv_export.py
src/pyergonomics/importers/: __init__.py  bvh.py  mocap.py  video.py  zed.py
src/pyergonomics/models/: person_model.py
src/pyergonomics/ui/: __init__.py  app_state.py  graph_painter.py  skeleton_geometry.py  skeleton_provider.py
src/pyergonomics/ui/apps/editor/: editor.py
src/pyergonomics/ui/models/: people_in_frame_proxy.py  people_in_time_proxy.py  person_model.py
src/pyergonomics/ui/qml/PyeHelpers/: AssessmentView.qml  FrameView.qml  PersonView.qml  SharedTimeline.qml  Skeleton3D.qml  TimelineEditor.qml  TrackView.qml  qmldir
src/pyergonomics/ui/timeline/: __init__.py  axis_painter.py  timeline_painter.py
tests/: conftest.py  test_importers.py  test_notebooks.py  test_pose_assessment.py  test_tracker.py
