[project]
name = "pyergonomics"
version = "0.1.0"
description = "pose analysis with python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.16.3",
    "polars>=1.35.1",
    "opencv-python>=4.12.0.88",
    "scikit-spatial>=9.0.1",
    "tqdm>=4.67.1",
    "toml>=0.10.2",
    "pose-skeletons",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.1.1",
    "ipycanvas>=0.14.1",
    "ipympl>=0.9.8",
    "k3d>=2.17.0",
    "bokeh>=3.8.0",
    "matplotlib>=3.10.7",
]
qt = [
    "pyside6>=6.9.2",
    "qtquick3d-opencv-helpers",
]
dev = [
    "ruff>=0.14.6",
    "pydeps>=3.0.1",
    "nuitka>=2.8.9",
]
sources = [
    "ultralytics>=8.3.242",
    "lap>=0.5.12",
    "bvhtoolbox>=0.1.3",
]
all = [
    "pyergonomics[notebook,qt,dev,sources]",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools]
include_package_data = true

[tool.setuptools.package-data]
"pye-qml" = ["ui/qml/PyeHelpers/*", "ui/qml/PyeHelpers/qmldir"]


[dependency-groups]
dev = [
    "pyergonomics",
]

[tool.uv.sources]
pyergonomics = { workspace = true }
pose-skeletons = { git = "https://github.com/daan/pose_skeletons" }
qtquick3d-opencv-helpers = { git = "https://github.com/daan/qtquick3d-opencv-helpers" }

[project.scripts]
init-project = "pyergonomics:init_project"
pye2csv = "pyergonomics.exporters.csv_export:main"

